# simdcrypt

./: .gitignore  CMakeLists.txt
.github/workflows/: test.yaml
include/simdcrypt/: AES.hpp  AESHash.hpp  PRNG.hpp
src/: AES.cpp  PRNG.cpp
tests/: basic.cpp  block.cpp  hash.cpp  openssl.cpp  prng.cpp
